ci/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pika
  labels:
    app.kubernetes.io/name: pika
spec:
  selector:
    app.kubernetes.io/name: pika
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: public
      port: 9090
      targetPort: public
      protocol: TCP
