ci/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pika
  labels:
    app.kubernetes.io/name: pika
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - pika.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pika
          port: 8080
